fix clock spacing format

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,8 @@ body {
 
 .timer{
   display: inline-block;
-  width: 30%;
+  width: 27%;
+  text-align: justify;
 }
 
 .btn{
